# ourboro-data

./: .env  .gitignore  Cargo.toml  README.md
.sqlx/: query-12af140563b15954f1ea43ba12e983c713e895724e342587db9dfbb5c225ce97.json  query-299f8d8a0add4e01855c6e84f8578a07e4fe4025979ba389bc13d29e588cae8c.json  query-6d17e5152dc2965e9730dec7394dafeb5e4b87733dc3d2de644d84ab96272f12.json  query-83ab25d1c95c0af075cfdd4a841bb5fe66342eaba0da0378acb0695fab85d6f2.json  query-a4677718f7db8516975187bb6437043ca8874d57af60766c24ccf697e7430ec1.json  query-b45e726dd9a7b6bfc4845603eb18281e9da10c0b1eaba0acc6f711fe62f489cd.json  query-e9621ff99f08f0494fca7a4292027f73132a4b2ca36b2751f9533cdb54b80e7f.json  query-f82de9b4b7a32e27e5c762249e822a5a2f55d2a526b844d4269190c9a82496e4.json
architecture/: architecture.md  censue_erd.md  census_erd.md
data/: folder-descriptions.md
data/resources/test/: dirty_csv.csv  pccf_may2020_sample.txt  test_census.csv  test_pccf.csv  test_postal_codes.csv
data/resources/tmp/: land_area  median_after_tax_income  population_2016  population_2021  total_apartment_building_5_stories_or_more  total_apartment_building_less_than_5_stories  total_apartment_duplex  total_occupied_dwellings  total_row_houses  total_semi_detached_houses  total_single_detached_houses
migrations/: 20240327160509_schema.sql
src/: cli.rs  lib.rs  main.rs  pccf.rs  util.rs
src/census/: census_model.rs  mod.rs
src/db/: mod.rs  sqlite.rs
src/pccf/: mod.rs  postal_code.rs  processing.rs
src/util/: cli.rs  csv_util.rs  io.rs  mod.rs
